--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,7 @@ openai-whisper==20231117
 google-generativeai==0.3.2
 pydantic==2.5.0
 pydantic-settings==2.1.0
+pyannote.audio>=3.1.1
+torch>=2.0.0
+torchaudio>=2.0.0
 
