--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -8,5 +8,8 @@ cmds = ["pip install --no-cache-dir -r requirements.txt"]
 cmds = []
 
 [start]
-cmd = "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+
+[staticAssets]
+"uploads" = "uploads"
 
