--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,10 +5,11 @@ alembic==1.12.1
 python-dotenv==1.0.0
 python-multipart==0.0.6
 openai-whisper==20231117
-google-generativeai==0.3.2
+google-generativeai>=0.8.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 pyannote.audio>=3.1.1
 torch>=2.0.0
 torchaudio>=2.0.0
+protobuf>=4.25.0,<5.0.0
 
