--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,4 +11,5 @@ pydantic-settings==2.1.0
 pyannote.audio>=3.1.1,<4.0.0
 protobuf>=4.25.0,<5.0.0
 opentelemetry-proto<1.34.0
+psycopg2-binary>=2.9.0
 
