--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,12 +2,14 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY backend/requirements.txt .
+# Копируем requirements.txt из backend (build context - корень проекта)
+COPY backend/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
     pip install --no-cache-dir -r requirements.txt && \
     pip cache purge && \
     rm -rf /root/.cache/pip
 
+# Копируем все файлы из backend в /app
 COPY backend/ .
 
 EXPOSE 8000
