--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,15 +2,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Копируем requirements.txt из backend (build context - корень проекта)
-COPY backend/requirements.txt ./requirements.txt
+# Копируем requirements.txt (build context уже в backend/)
+COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
     pip install --no-cache-dir -r requirements.txt && \
     pip cache purge && \
     rm -rf /root/.cache/pip
 
-# Копируем все файлы из backend в /app
-COPY backend/ .
+# Копируем все файлы из текущей директории (backend/) в /app
+COPY . .
 
 EXPOSE 8000
 
