Исправлено использование переменной PORT
- Убран startCommand из railway.json файлов (будет использоваться CMD из Dockerfile)
- Изменен CMD в Dockerfile на shell форму для правильной подстановки PORT
- Добавлен ENV PORT=8000 как значение по умолчанию
- Railway автоматически установит переменную PORT при запуске

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,9 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Устанавливаем переменную PORT по умолчанию
+ENV PORT=8000
+
 # Копируем requirements.txt (build context уже в backend/)
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
@@ -14,4 +17,5 @@ COPY . .
 
 EXPOSE 8000
 
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
+# Используем переменную PORT из окружения (Railway установит её автоматически)
+CMD uvicorn main:app --host 0.0.0.0 --port $PORT
