--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,6 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Устанавливаем переменную PORT по умолчанию
-ENV PORT=8000
-
 # Копируем requirements.txt (build context уже в backend/)
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
@@ -18,4 +15,5 @@ COPY . .
 EXPOSE 8000
 
 # Используем переменную PORT из окружения (Railway установит её автоматически)
-CMD uvicorn main:app --host 0.0.0.0 --port $PORT
+# Если PORT не установлен, используем 8000 по умолчанию
+CMD sh -c "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
