--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,6 +15,5 @@ COPY . .
 EXPOSE 8000
 
 # Используем переменную PORT из окружения (Railway установит её автоматически)
-# Railway всегда устанавливает PORT, поэтому используем его напрямую
-# Используем shell форму для правильной подстановки переменной
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
+# Используем простую shell форму для правильной подстановки переменной
+CMD sh -c "uvicorn main:app --host 0.0.0.0 --port \$PORT"
