--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,4 +16,4 @@ EXPOSE 8000
 
 # Используем переменную PORT из окружения (Railway установит её автоматически)
 # Используем простую shell форму для правильной подстановки переменной
-CMD sh -c "uvicorn main:app --host 0.0.0.0 --port \$PORT"
+CMD sh -c "uvicorn main:app --host 0.0.0.0 --port \$PORT 2>&1"
