--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,5 +15,6 @@ COPY . .
 EXPOSE 8000
 
 # Используем переменную PORT из окружения (Railway установит её автоматически)
-# Используем простую shell форму для правильной подстановки переменной
-CMD sh -c "uvicorn main:app --host 0.0.0.0 --port \$PORT 2>&1"
+# Используем ENV для установки дефолтного значения и shell форму для подстановки
+ENV PORT=8000
+CMD sh -c "uvicorn main:app --host 0.0.0.0 --port ${PORT} 2>&1"
