--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,6 +15,5 @@ COPY . .
 EXPOSE 8000
 
 # Используем переменную PORT из окружения (Railway установит её автоматически)
-# Используем ENV для установки дефолтного значения и shell форму для подстановки
-ENV PORT=8000
-CMD sh -c "uvicorn main:app --host 0.0.0.0 --port ${PORT} 2>&1"
+# Используем exec для замены shell процесса на uvicorn и правильной подстановки PORT
+CMD exec uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000} 2>&1
