Откат к рабочей версии: восстановлен Dockerfile и main.py из коммита cf1f0eb

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,6 +14,6 @@ COPY . .
 
 EXPOSE 8000
 
-# Используем скрипт запуска для правильной подстановки PORT
-RUN chmod +x /app/start.sh
-CMD ["/app/start.sh"]
+# Используем переменную PORT из окружения (Railway установит её автоматически)
+# Если PORT не установлен, используем 8000 по умолчанию
+CMD sh -c "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
