--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,127 @@
-node_modules/
-.next/
-.env
-.env.local
-*.log
-.DS_Store
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+*.manifest
+*.spec
+pip-log.txt
+pip-delete-this-directory.txt
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.hypothesis/
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.pytype/
+cython_debug/
+
+# Virtual environments
+.env
 .venv/
 venv/
+ENV/
+env/
+.ENV
 
-backend/.env
+# Node.js / Next.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+.next/
+out/
+build/
+.turbo/
+.vercel
+*.tsbuildinfo
+next-env.d.ts
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
+
+# Logs
+*.log
+logs/
+*.log.*
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Backend specific
 backend/uploads/
-backend/*.db
-backend/test.db
-backend/ai_coach.db
-backend/__pycache__/
-backend/**/__pycache__/
-backend/**/*.pyc
+backend/.env
+backend/.env.local
+backend/.env.*.local
 
+# Frontend specific
 frontend/.next/
 frontend/node_modules/
 frontend/.env.local
+frontend/.env.*.local
+frontend/.vercel
 
-*.log
+# Docker
+.dockerignore
+
+# Temporary files
 /tmp/
+/temp/
+*.tmp
+*.temp
+*.bak
+*.backup
+*.old
 
-start.sh
+# Railway / Deployment
+.railway/
 
-
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
